--- a/exercícios/ex022/fundo005.html
+++ b/exercícios/ex022/fundo005.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
@@ -12,11 +12,16 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /* shorhand-background
+            color-image-position-repeat-{size}-attachment
+            */
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 3px solid darkblue;
@@ -27,7 +32,12 @@
 <body>
     <main>
     <h1>Teste de imagem de fundo</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto magni assumenda est eos cupiditate temporibus voluptatem placeat nesciunt nihil alias vel quasi error veniam culpa necessitatibus repellat ratione, voluptate inventore.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odio animi iste ab, in dolores at inventore facere, quod officiis minima dicta, reprehenderit laborum doloribus debitis iusto possimus quidem expedita.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto magni assumenda est eos cupiditate temporibus voluptatem placeat nesciunt nihil alias vel quasi error veniam culpa necessitatibus repellat ratione, voluptate inventore.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odio animi iste ab, in dolores at inventore facere, quod officiis minima dicta, reprehenderit laborum doloribus debitis iusto possimus quidem expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dignissimos veniam ad repudiandae at molestias quas, illum optio, expedita dolor laboriosam blanditiis iure voluptatibus cumque necessitatibus quo maxime omnis? Non! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto eveniet laudantium distinctio, magni laboriosam ipsum obcaecati quod ex inventore, cum consequuntur nihil magnam dolor enim. Quae atque suscipit possimus nisi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto magni assumenda est eos cupiditate temporibus voluptatem placeat nesciunt nihil alias vel quasi error veniam culpa necessitatibus repellat ratione, voluptate inventore.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odio animi iste ab, in dolores at inventore facere, quod officiis minima dicta, reprehenderit laborum doloribus debitis iusto possimus quidem expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dignissimos veniam ad repudiandae at molestias quas, illum optio, expedita dolor laboriosam blanditiis iure voluptatibus cumque necessitatibus quo maxime omnis? Non! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto eveniet laudantium distinctio, magni laboriosam ipsum obcaecati quod ex inventore, cum consequuntur nihil magnam dolor enim. Quae atque suscipit possimus nisi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto magni assumenda est eos cupiditate temporibus voluptatem placeat nesciunt nihil alias vel quasi error veniam culpa necessitatibus repellat ratione, voluptate inventore.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odio animi iste ab, in dolores at inventore facere, quod officiis minima dicta, reprehenderit laborum doloribus debitis iusto possimus quidem expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dignissimos veniam ad repudiandae at molestias quas, illum optio, expedita dolor laboriosam blanditiis iure voluptatibus cumque necessitatibus quo maxime omnis? Non! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto eveniet laudantium distinctio, magni laboriosam ipsum obcaecati quod ex inventore, cum consequuntur nihil magnam dolor enim. Quae atque suscipit possimus nisi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto magni assumenda est eos cupiditate temporibus voluptatem placeat nesciunt nihil alias vel quasi error veniam culpa necessitatibus repellat ratione, voluptate inventore.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odio animi iste ab, in dolores at inventore facere, quod officiis minima dicta, reprehenderit laborum doloribus debitis iusto possimus quidem expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dignissimos veniam ad repudiandae at molestias quas, illum optio, expedita dolor laboriosam blanditiis iure voluptatibus cumque necessitatibus quo maxime omnis? Non! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto eveniet laudantium distinctio, magni laboriosam ipsum obcaecati quod ex inventore, cum consequuntur nihil magnam dolor enim. Quae atque suscipit possimus nisi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto magni assumenda est eos cupiditate temporibus voluptatem placeat nesciunt nihil alias vel quasi error veniam culpa necessitatibus repellat ratione, voluptate inventore.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odio animi iste ab, in dolores at inventore facere, quod officiis minima dicta, reprehenderit laborum doloribus debitis iusto possimus quidem expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dignissimos veniam ad repudiandae at molestias quas, illum optio, expedita dolor laboriosam blanditiis iure voluptatibus cumque necessitatibus quo maxime omnis? Non! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto eveniet laudantium distinctio, magni laboriosam ipsum obcaecati quod ex inventore, cum consequuntur nihil magnam dolor enim. Quae atque suscipit possimus nisi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto magni assumenda est eos cupiditate temporibus voluptatem placeat nesciunt nihil alias vel quasi error veniam culpa necessitatibus repellat ratione, voluptate inventore.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odio animi iste ab, in dolores at inventore facere, quod officiis minima dicta, reprehenderit laborum doloribus debitis iusto possimus quidem expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dignissimos veniam ad repudiandae at molestias quas, illum optio, expedita dolor laboriosam blanditiis iure voluptatibus cumque necessitatibus quo maxime omnis? Non! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto eveniet laudantium distinctio, magni laboriosam ipsum obcaecati quod ex inventore, cum consequuntur nihil magnam dolor enim. Quae atque suscipit possimus nisi.</p>
 </main>
 </body>
 </html>
