--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -36,7 +36,7 @@
 
         td, th{
             border: 1px solid black;
-            padding: 10pz;
+            padding: 10px;
         }
 
         thead, tfoot{
