--- a/desafios/desafio013/parte001.html
+++ b/desafios/desafio013/parte001.html
@@ -4,23 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 13 - PT1</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table{
+            width: 300px;
+            height: 200px;
+        }
+
+        td{
+            border: 1px solid black;
+            border-collapse: separate;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <table>
         <tr>
-            <td></td>
+            <td>1</td>
+            <td>2</td>
+            <td rowspan="2">3</td>
+            <td>4</td>
         </tr>
         <tr>
-            <td></td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
         </tr>
         <tr>
-            <td></td>
+            <td colspan="3">8</td>
+            <td>9</td>
         </tr>
         <tr>
-            <td></td>
+            <td rowspan="2">10</td>
+            <td colspan="2">11</td>
+            <td>12</td>
         </tr>
         <tr>
-            <td></td>
+            <td>13</td>
+            <td>14</td>
+            <td>15</td>
         </tr>
     </table>
 </body>
