--- a/desafios/desafio014/index.html
+++ b/desafios/desafio014/index.html
@@ -16,7 +16,7 @@
         }
 
         td, th{
-            border: 1px solid black;
+            border: 1px solid rgb(0, 0, 0);
             text-align: center;
         }
 
