--- a/exercícios/ex024/iframe002.html
+++ b/exercícios/ex024/iframe002.html
@@ -20,7 +20,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus veniam officia corrupti corporis ducimus aut, autem enim explicabo rerum tempore earum, ea, similique est. Eligendi architecto adipisci quod! Nulla, maxime. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum similique provident aliquid, esse dignissimos tempora alias optio quaerat eum velit! Molestias eligendi mollitia laborum soluta recusandae quasi repudiandae saepe tempore.</p>
 
-    <iframe src="pag001.html" frameborder="0" width="500" height="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="500" height="500">
+        <p>Infelizmente seu navegador nao é compatível com isso!</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, laudantium pariatur. Modi, eaque veniam in id consequuntur quaerat fugit? Nisi cum corporis vitae cupiditate eius accusantium fuga tempora a nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum soluta sint perspiciatis repellendus rem nostrum, ipsa in. Laudantium, cupiditate similique ad minima fuga, aspernatur facere, itaque quas libero nihil commodi.</p>
 </body>
