--- a/exercícios/ex026/mq005/index.html
+++ b/exercícios/ex026/mq005/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="estilos/style.css">
     <title>Media Queries</title>
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            Menu
+            </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -27,5 +31,14 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus, repellat itaque culpa dicta iusto, doloribus impedit ad fugit molestias excepturi, voluptate ducimus praesentium. Asperiores suscipit laboriosam placeat, dignissimos aliquid quos? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum tempore iure quaerat, esse quos libero. Eum numquam, obcaecati, quia nihil, eius voluptatum eaque maxime harum eligendi alias sed. Labore, amet?</p>
         </article>
     </main>
+    <script>
+        function clickMenu(){
+            if (itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+        }
+    }
+    </script>
 </body>
 </html>
