--- a/exercícios/ex027/flex011/index.html
+++ b/exercícios/ex027/flex011/index.html
@@ -20,13 +20,28 @@
             flex-grow: 1;
            
         }
+
+        div#cxA{
+            flex-grow: 1;
+            flex-shrink: 0;
+        }
+
+        div#cxB{
+            flex-grow: 0;
+            flex-shrink: 1;
+        }
+
+        div#cxC{
+            flex-grow: 5;
+            flex-shrink: 2;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="item">A</div>
-        <div class="item">B</div>
-        <div class="item">C</div>
+        <div class="item" id="cxA">A</div>
+        <div class="item" id="cxB">B</div>
+        <div class="item" id="cxC">C</div>
     </div>
 </body>
 </html>
